# mimic

./: .biomeignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .pnpmrc  .prettierignore  .stylelintrc.cjs  .stylelintrc.json  APPLE_CLEANING.md  APPLE_CLEANING_SUMMARY.md  AUTOFIX_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLI_EXTRACTION_COMPLETE.md  CODE_QUALITY_AUDIT_COMPLETE.md  COLLISION_PREVENTION_IMPLEMENTATION_COMPLETE.md  COLLISION_PREVENTION_UPDATE_COMPLETE.md  CONTRIBUTING.md  DEVELOPMENT.md  LINTING_SETUP_COMPLETE.md  MIGRATION_SUMMARY.md  Makefile  NX_BUILD_FIX_COMPLETE.md  Next_Steps.md  PENPOT_PIPELINE_COMPLETE.md  PIPELINE_STABILIZATION_COMPLETE.md  QUICK_REFERENCE.md  REACT_NATIVE_2025_MIGRATION_COMPLETE.md  REACT_PEER_DEPENDENCY_RESOLVED.md  README.md  SETUP_COMPLETE.md  UPGRADE_2025.md  biome.json  commitlint.config.cjs  config.markdownlint-cli2.jsonc  (+18 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  copilot-instructions.yml  labeler.yml  pull_request_template.md
.husky/: post-checkout  post-merge  post-rewrite  pre-commit
.trunk/: actions  notifications  out  tools  trunk-minimal.yaml  trunk.yaml  trunk.yaml.backup
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
docs/: ADR.md  ADVANCED_DOCUMENTATION_SUMMARY.md  API.md  AUTOFIX_SYSTEM.md  CODE_QUALITY_PROTOCOL.md  COLLISION_PREVENTION.md  COLLISION_PREVENTION_EXAMPLES.md  CONTROL_DOCUMENT.md  DEPLOYMENT.md  (+18 more)
(+141 files in other folders)
