[package]
name = "mimic-desktop"
version = "0.1.0"
description = "Mimic Design Tokens Desktop App"
authors = ["Mimic Team"]
repository = "https://github.com/mimic-org/mimic"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "mimic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
